src/styles/App.scss
@import "./variables";

html {
  font-size: 100%;
  box-sizing: border-box;
  scroll-behavior: smooth;
  min-height: 100vh;
}

body {
  margin: 0px;
  height: 100%;
  font-family: "Poppins", sans-serif;
  background-color: $kentoBlue;
  color: white;
  max-width: 100%;
}

.App {
  display: grid;
  width: 100%;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

.side-btn {
  position: fixed;
  border-radius: 50%;
  height: 5vh;
  width: 5vh;
  top: 5vh;
  right: 10vw;
  background-color: $kentoYellow;
  border: none;
  display: none;
}

.menu-icon {
  fill: white;
}

.navbar {
  max-width: 100%;
  position: sticky;
  top: 0;
  left: 0;
  background-color: $kentoBlue;
  min-height: 6%;
  padding: 10px 10vw;
  z-index: 1;
}

.navbar__wrapper {
  display: flex;
  justify-content: center;
  margin: auto;
  gap: 5vw;
  font-size: 1.5rem;
}

a {
  color: white;
  text-decoration: none;
}

.hero {
  width: 100%;
  min-height: 75vh;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 10rem;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.hero__wrapper {
  font-size: 6vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: left;
  animation: fadeIn 3s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.dev-title,
.web-title,
.first-name,
.last-name {
  margin: 0;
  padding: 0;
  display: inline-block;
}

.yellow-text {
  color: $kentoYellow;
}

.about {
  background-color: $kentoOrange;
  padding: 0 10vw;
  width: 100%;
  margin: 0;
  padding-bottom: 5vw;
}

.about__wrapper {
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  max-width: 50vw;
}

.hi {
  animation: moveInL 3s cubic-bezier(1, 1.1, 0, 1) 0.5s 1;
  animation-fill-mode: forwards;
  visibility: hidden;
}

@keyframes moveInL {
  0% {
    transform: translate(-1000%, 0);
    visibility: visible;
  }
  100% {
    transform: translate(0%, 0);
    visibility: visible;
  }
}

.about h1 {
  font-size: 4rem;
}

.intro__wrapper {
  margin: auto;
  max-width: 50rem;
}

.info {
  font-size: 1.5rem;
  text-align: left;
}

.skills__wrapper {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.skills-title {
  margin: auto;
  max-width: 50rem;
}

.skill-list {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(3, 1fr);
  grid-gap: 1vw;
  justify-items: center;
  margin-left: auto;
  margin-right: auto;
}

.skill-box {
  display: flex;
  justify-content: center;
  align-items: center;
  max-height: 15vh;
  max-width: 15vh;
  border-radius: 10px;
  padding: auto;
}

.skill-box img {
  filter: grayscale(10%);
  opacity: 50%;
  transition: all 0.2s ease-in-out;
  height: min(100%, 200px);
  width: min(100%, 200px);
}

.skill-box img:hover {
  opacity: 100%;
  filter: grayscale(0%);
  transform: scale(1.1);
}

.projects {
  background-color: white;
}

.projects__wrapper {
  margin-left: auto;
  margin-right: auto;
  color: $kentoBlue;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 3vh;
}

.contact {
  background-color: $kentoBlue;
  padding-bottom: 100px;
  margin-bottom: 100px;
  max-width: 100%;
}

.contact__wrapper {
  font-size: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.contactBtns {
  display: flex;
  gap: 2rem;
  justify-content: center;

  img {
    height: 60px;
    width: 60px;
  }
}

@media (max-width: 900px) {
  .navbar {
    display: none;
  }

  .side-btn {
    display: inline-block;
  }

  .hero {
    min-height: 70vh;
  }

  .dev-title,
  .web-title,
  .first-name,
  .last-name {
    display: block;
    font-size: 13vw;
  }

  .intro__wrapper {
    margin-left: 1px;
    margin-right: 1px;
  }

  .info {
    text-align: center;
    font-size: 0.8rem;
    animation: moveInL 3s cubic-bezier(1, 1.1, 0, 1) 0.5s 1;
    animation-fill-mode: forwards;
    visibility: hidden;
  }

  .skill-box img {
    filter: grayscale(0%);
    opacity: 100%;
  }

  .skill-list {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(4, 1fr);
    grid-gap: 5vw;
  }
}

